adicionando o css na estrutura

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "agencia-devhouse",
+  "name": "agenciadevhouse",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "./node_modules/.bin/nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
