--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuidv4": "^6.2.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
